[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamecubedays-icefuse-dashboard"
version = "1.0.0"
description = "A GMod server data scraper, processor, and visualizer for player analytics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GameCubeDays"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.11.0",
    "python-dotenv>=0.21.0",
    "google-auth>=2.16.0",
    "google-auth-oauthlib>=0.8.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.70.0",
    "selenium>=4.7.0",
    "webdriver-manager>=3.8.0",
    "lxml>=4.9.0",
    "pytz>=2022.7",
    "schedule>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=22.12.0",
    "flake8>=6.0.0",
    "mypy>=0.991",
    "pre-commit>=2.21.0",
]

[project.urls]
Homepage = "https://github.com/GameCubeDays/GameCubeDays-IceFuse-Dashboard"
Repository = "https://github.com/GameCubeDays/GameCubeDays-IceFuse-Dashboard.git"
Issues = "https://github.com/GameCubeDays/GameCubeDays-IceFuse-Dashboard/issues"

[project.scripts]
icefuse-dashboard = "main:main"

[tool.setuptools]
packages = ["src", "utils", "data_processing", "visualization", "google_sheets"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.csv"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
